test/reassignDepVar.slq
// args: --run

def main(){
	n:=3;
	n+=1;
	a:=vector(n,0:ğ”¹); // ok
	n+=1; // error
}
